# polyfem

./: .clang-format-ignore  .gitignore  0001-fix-uninitialized-pure_mass_ass_vals_cache.patch  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  sample.json
cmake/recipes/: ipc_toolkit.cmake  polysolve.cmake  spanlite.cmake  yaml.cmake
json-specs/: material-parameters.json
src/polyfem/: CMakeLists.txt  State.cpp  State.hpp
src/polyfem/assembler/: Assembler.cpp  Assembler.hpp  AssemblerData.hpp  AssemblerUtils.cpp  AssemblyCache.cpp  AssemblyCache.hpp  AssemblyPipeline.hpp  AssemblyResult.hpp  Bilaplacian.cpp  Bilaplacian.hpp  CMakeLists.txt  DofMappingStore.cpp  DofMappingStore.hpp  Electrostatics.cpp  Electrostatics.hpp  ElementBases.cpp  ElementBases.hpp  FixedCorotational.cpp  FixedCorotational.hpp  GenericElastic.cpp  GenericElastic.hpp  Helmholtz.cpp  Helmholtz.hpp  HookeLinearElasticity.cpp  HookeLinearElasticity.hpp  IncompressibleLinElast.cpp  IncompressibleLinElast.hpp  Laplacian.cpp  Laplacian.hpp  LinearElasticity.cpp  LinearElasticity.hpp  Mass.cpp  Mass.hpp  Materials.hpp  MooneyRivlin3ParamSymbolic.cpp  MooneyRivlin3ParamSymbolic.hpp  MultiModel.cpp  MultiModel.hpp  NavierStokes.cpp  NavierStokes.hpp  (+14 more)
src/polyfem/autogen/: CMakeLists.txt  auto_b_bases.cpp  auto_b_bases.hpp  auto_p_bases.cpp  auto_p_bases.hpp  auto_p_bases_nodes.cpp  auto_p_bases_nodes.hpp  auto_pyramid_bases.cpp  auto_pyramid_bases.hpp  auto_pyramid_bases_nodes.cpp  auto_pyramid_bases_nodes.hpp  auto_q_bases_1d_grad.cpp  auto_q_bases_1d_grad.hpp  auto_q_bases_1d_val.cpp  auto_q_bases_1d_val.hpp  auto_q_bases_2d_grad.cpp  auto_q_bases_2d_grad.hpp  auto_q_bases_2d_val.cpp  auto_q_bases_2d_val.hpp  auto_q_bases_3d_grad.cpp  auto_q_bases_3d_grad.hpp  auto_q_bases_3d_grad_0.cpp  auto_q_bases_3d_val.cpp  auto_q_bases_3d_val.hpp  legacy_auto_b_bases.cpp  legacy_auto_b_bases.hpp  legacy_auto_p_bases.cpp  legacy_auto_p_bases.hpp  legacy_auto_pyramid_bases.cpp  legacy_auto_pyramid_bases.hpp  legacy_auto_q_bases.cpp  legacy_auto_q_bases.hpp  p_bases.py  pretty_print.py  prism_bases.cpp  pyramid_bases.py  q_bases.py
src/polyfem/basis/: BasisStore.cpp  BasisStore.hpp  CMakeLists.txt  ElementBases.cpp  ElementBases.hpp  EvalBasis.cpp  EvalBasis.hpp  EvalLagrangeBasis.cpp  EvalLagrangeBasis.hpp  EvalRationalBasis.cpp  EvalRationalBasis.hpp  LagrangeBasis2d.cpp  LagrangeBasis2d.hpp  LagrangeBasis3d.cpp  LagrangeBasis3d.hpp
src/polyfem/io/: Evaluator.cpp  OutData.cpp
src/polyfem/materials/: BuildMaterialExprFromJson.cpp  BuildMaterialExprFromJson.hpp  CMakeLists.txt  ElasticityTensor.cpp  ElasticityTensor.hpp  FiberDirection.cpp  FiberDirection.hpp  LameParameter.cpp  LameParameter.hpp  MaterialExprRegistry.hpp  MaterialExprRegistryImpl.hpp  Materials.cpp  Materials.hpp
src/polyfem/mesh/: Mesh.cpp
src/polyfem/optimization/: AdjointNLProblem.cpp  DiffCache.cpp  Optimizations.cpp
src/polyfem/quadrature/: CMakeLists.txt  QuadratureStore.cpp  QuadratureStore.hpp
src/polyfem/solver/: NLHomoProblem.cpp  NLHomoProblem.hpp  (+1 more)
tests/: CMakeLists.txt  test_parametrizations.cpp
(+39 files in other folders)
